# Ledu

./: BUILDGUIDE.md  README.md  pyproject.toml  pyproject.toml.bak  pytest.ini
src/ledu/: __init__.py  cli.py  config.py
src/ledu/blocks/: __init__.py  advanced.py  base.py  code.py  heading.py  list_item.py  media.py  paragraph.py  table.py
src/ledu/builder/: __init__.py  page_builder.py
src/ledu/notion/: client.py  upload.py
src/ledu/parser/: __init__.py  markdown_parser.py  rich_text.py
src/ledu/utils/: enums.py  errors.py  typing.py
tests/: __init__.py  test_blocks.py  test_parser.py  test_roundtrip.py
