[tool.poetry]
name = "ledu"
version = "0.1.1"
description = "This repository is build for Bi - directional conversion Notion ⇄ Markdown"
authors = ["Suhail <suhailece@gmail.com>"]
readme = "README.md"
packages = [{include = "ledu", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
