[tool.poetry]
name = "ledu"
version = "0.1.3"
description = "This repository is build for Bi - directional conversion Notion ⇄ Markdown"
authors = ["Suhail <suhailece@gmail.com>"]
readme = "README.md"
packages = [{include = "ledu", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
markdown-it-py = "^3.0"
notion-client = "^2.2"
pydantic = "^2.7"          # optional but handy
rich = "^13.7"             # CLI prettiness

[tool.poetry.group.test.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
